- deleting rows now yanks the deleted rows, could do the same for replace command "c" - now displays the current mode. - clicking anywhere on the splash screen now puts the command line in focus. - fixed an issue with the Pk command, still another issue that I need to sort out. - added border to visual selections. - added commands "gh" as an alt for "^" and "gl" as an alt for "$"

--- a/documentationPage/blocks/topNavBar.html
+++ b/documentationPage/blocks/topNavBar.html
@@ -1,6 +1,6 @@
 <block class="topNavBar">
 	<div id="navbar">
-		<img src="../../src/assets/128x128.png" alt="logo" height="40px" width="40px">
+		<img src="images/128x128.png" alt="logo" height="40px" width="40px">
 		<span>DataFlow - docs</span>
 	</div>
 </block>
